# aiHelper

./: .gitignore  .mcp.json  README.md  index.html  package-lock.json  package.json
.claude/: settings.local.json
.claude/skills/codereview/: SKILL.md
.claude/skills/dev/: SKILL.md
.github/workflows/: release.yml
documentation/: todo.md
documentation/adrs/: 001-ai-system-choice.md  002-ai-assisted-project-suggestions.md
src/: chat.js  history.js  main.js  notes.js  projects.js  settings.js  stats.js  styles.css  tabs.js  tagger.js  tasks.js  tips.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai.rs  commands.rs  config.rs  db.rs  input_monitor.rs  lib.rs  main.rs  tools.rs
